[gd_scene load_steps=2 format=3 uid="uid://ba24a446tdrw6"]

[ext_resource type="Script" uid="uid://cxld5y4bbusg2" path="res://Scripts/killzone.gd" id="1_jvagm"]

[node name="Killzone" type="Area2D"]
collision_layer = 16
script = ExtResource("1_jvagm")

[node name="Death Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="I-Frame" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Death Timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Death Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="I-Frame" to="." method="_on_i_frame_timeout"]
